@@ -77,6 +77,21 @@ name|codec
 operator|.
 name|language
 operator|.
+name|Caverphone
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|codec
+operator|.
+name|language
+operator|.
 name|DoubleMetaphone
 import|;
 end_import
@@ -299,6 +314,24 @@ name|ENGLISH
 argument_list|)
 argument_list|,
 name|RefinedSoundex
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|registry
+operator|.
+name|put
+argument_list|(
+literal|"Caverphone"
+operator|.
+name|toUpperCase
+argument_list|(
+name|Locale
+operator|.
+name|ENGLISH
+argument_list|)
+argument_list|,
+name|Caverphone
 operator|.
 name|class
 argument_list|)
