@@ -466,6 +466,58 @@ literal|"E034034"
 block|}
 argument_list|)
 expr_stmt|;
+name|assertAlgorithm
+argument_list|(
+literal|"Caverphone"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"Darda Karleen Datha Carlene"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"TTA1111111"
+block|,
+literal|"Darda"
+block|,
+literal|"KLN1111111"
+block|,
+literal|"Karleen"
+block|,
+literal|"TTA1111111"
+block|,
+literal|"Datha"
+block|,
+literal|"KLN1111111"
+block|,
+literal|"Carlene"
+block|}
+argument_list|)
+expr_stmt|;
+name|assertAlgorithm
+argument_list|(
+literal|"Caverphone"
+argument_list|,
+literal|"false"
+argument_list|,
+literal|"Darda Karleen Datha Carlene"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"TTA1111111"
+block|,
+literal|"KLN1111111"
+block|,
+literal|"TTA1111111"
+block|,
+literal|"KLN1111111"
+block|}
+argument_list|)
+expr_stmt|;
 block|}
 DECL|method|assertAlgorithm
 specifier|static
